# red-team-cheat-sheets

./: README.md
Complete-AD-Red-Team-Cheatsheet/: complete-AD-cheat-sheet.txt
EDR-freeze/: edr-freeze.py  nuclear-defender.py
GhostLoad/: Readme.md  ghostload.py
Ghostcat-Tomcat/: Dockerfile  Readme.md  cmd.jsp  ghostcat-pwn.py  requirements.txt  rev.jsp
Prompt Injections/: Readme.md  ai_lab.py
Windows-Privilege-Escalation/: Cheat-Sheet for Red-Team-Assessments  README.md
llmscan_pro/: LICENSE  README.md  ReadMe.md  cli.py  decider.py  package.json  pyproject.toml  reporter_html.py  runner.py  verifier.py
llmscan_pro/adapters/: mock_adapter.py  openai_adapter.py
llmscan_pro/detectors/: code_risk_detector.py  dos_detector.py  hidden_detector.py  keyword_detector.py  leakage_checker.py  perplexity_detector.py  pii_detector.py  regex_detector.py  secret_detector.py  semantic_detector.py  template_injection_detector.py  toxicity_detector.py
llmscan_pro/probes/: agent_probes.py  basic_probes.py  owasp_top10_2025.py  rag_probes.py
llmscan_pro/retriever/: mock_retriever.py
llmscan_pro/tests/: test_imports.py  test_rag_poison.py  test_runner_basic.py  test_supply_chain.py
