[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmscan_pro"
version = "1.0.0"
description = "Defensive LLM pentesting toolkit (mock-safe)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["requests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["llmscan_pro*"]
